--- a/Deploy-containers-pipeline/index.html
+++ b/Deploy-containers-pipeline/index.html
@@ -4,6 +4,6 @@
 	<title>Udacity Capstone</title>
 </head>
 <body>
-	<p>Hello World ! My name is Salma Mattar </p>
+	<p>Hello World ! My name is Salma Mattar <p></p>
 </body>
 </html>
